--- a/src/app/perfil-alumno/perfil-alumno.component.html
+++ b/src/app/perfil-alumno/perfil-alumno.component.html
@@ -14,7 +14,7 @@
         <div class="col" *ngFor="let asesoria of asesorias">
           <div class="card h-100">
             <div class="card-body">
-              <h5 class="card-title">{{ asesoria.materiaNombre }}</h5> 
+              <h5 class="card-title">{{ asesoria.materia }}</h5> 
               <p class="card-text">
                 <i class="fas fa-calendar-day"></i> <strong>Inicio:</strong> {{ asesoria.fecha_inicio }} <br>
                 <i class="fas fa-calendar-check"></i>  <strong>Fin:</strong> {{ asesoria.fecha_fin }} <br>
@@ -48,7 +48,7 @@
       <div class="col" *ngFor="let asesoria of asesoriasAsignadas">
         <div class="card h-100">
           <div class="card-body">
-            <h5 class="card-title">{{ asesoria.materiaNombre }}</h5>
+            <h5 class="card-title">{{ asesoria.materia }}</h5>
             <p class="card-text">
               <i class="fas fa-calendar-week"></i> <strong>Días:</strong> {{ asesoria.dias }} <br>
               <i class="fas fa-clock"></i> <strong>Horario:</strong> {{ asesoria.horario_inicio }} - {{ asesoria.horario_fin }}
