--- a/src/app/solicitud/solicitud.component.html
+++ b/src/app/solicitud/solicitud.component.html
@@ -49,10 +49,10 @@
       <div class="col" *ngFor="let asesoria of asesoriasSolicitadas">
         <div class="card h-100">
           <div class="card-body">
-            <h5 class="card-title">{{ asesoria.materiaNombre }}</h5>
+            <h5 class="card-title">{{ asesoria.materia }}</h5>
             <p class="card-text">
               <i class="fas fa-calendar-week"></i> <strong>Días:</strong> {{ asesoria.dias }} <br>
-              <i class="fas fa-clock"></i> <strong>Horario:</strong> {{ asesoria.horario_inicio }} - {{ asesoria.horario_fin }} <br>
+              <i class="fas fa-clock"></i> <strong>Horario:</strong> {{ asesoria.horarioInicio }} - {{ asesoria.horarioFin }} <br>
               
             </p>
             <div class="d-flex justify-content-center">
